{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 217,
  "lineage": "ead897c6-698c-ef55-33b1-b42b695a464b",
  "resources": [
    {
      "module": "module.instance",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633143608043:vpc/vpc-0565475cef4feac4e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-021fcd1bb57ee9c33",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04d88bdbeacfac1e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0565475cef4feac4e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0931468428c521342",
            "owner_id": "633143608043"
          }
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1a6835595fb9246",
            "arn": "arn:aws:ec2:us-east-1:633143608043:instance/i-0bdf1ecdbdbefe14d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0bdf1ecdbdbefe14d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Klima",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0caf505c5346cc355",
            "private_dns": "ip-172-31-85-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.85.10",
            "public_dns": "ec2-3-87-2-48.compute-1.amazonaws.com",
            "public_ip": "3.87.2.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077b2d0336d22f7cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dd4ebd1081b10b2",
            "tags": {
              "Name": "hillel-A.Klimakhin"
            },
            "tags_all": {
              "Hillel": "Lesson 26",
              "Name": "hillel-A.Klimakhin",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047cb45aac626c48e"
            ]
          },
          "dependencies": [
            "module.instance.aws_iam_instance_profile.HW20-iam-profile",
            "module.instance.aws_iam_role.HW20-iam-role",
            "module.instance.data.aws_ami.amazonlinux2"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fallback",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633143608043:security-group/sg-027e2fa72bac085f3",
            "description": "FALKBACK SG ALLOW ALL SSH",
            "egress": [],
            "id": "sg-027e2fa72bac085f3",
            "ingress": [],
            "name": "backup-sg",
            "name_prefix": "",
            "owner_id": "633143608043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Backup-SG"
            },
            "tags_all": {
              "Hillel": "Lesson 26",
              "Name": "Backup-SG",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0565475cef4feac4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633143608043:security-group-rule/sgr-0270c48568f7ae8f8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all",
            "from_port": null,
            "id": "sgr-0270c48568f7ae8f8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-027e2fa72bac085f3",
            "security_group_rule_id": "sgr-0270c48568f7ae8f8",
            "tags": {
              "Name": "egress-all"
            },
            "tags_all": {
              "Hillel": "Lesson 26",
              "Name": "egress-all",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance.aws_security_group.fallback",
            "module.instance.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633143608043:security-group-rule/sgr-06f1a770184631425",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH from ALL IPs",
            "from_port": 22,
            "id": "sgr-06f1a770184631425",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-027e2fa72bac085f3",
            "security_group_rule_id": "sgr-06f1a770184631425",
            "tags": {
              "Name": "ALLOW ALL SSH"
            },
            "tags_all": {
              "Hillel": "Lesson 26",
              "Name": "ALLOW ALL SSH",
              "Terraform": "true"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance.aws_security_group.fallback",
            "module.instance.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}